--- a/partials/game.html
+++ b/partials/game.html
@@ -1,54 +1,52 @@
 
-
+<p>{{test}}</p>
 
 <div class="bingoTable">
     <div class="row">
-    <div ng-repeat="cell in bingoTable.row0">
+    <div ng-repeat="index in [0, 1, 2, 3, 4, 5]">
         <div class="col-md-2">
-        <div class="panel panel-primary" ng-click="voteRow0(cell.col)">
+        <div class="panel panel-primary" ng-click="vote(index)">
             <h1 ng-if="isOwner()">
-                 {{game.row0[cell.col]}}
+                 {{game.votes[index]}}
             </h1>
             <p class="text-center">
-                <img src="img/{{cell.filename}}">
+                <img src="img/{{bingoTable.cells[index].filename}}">
             </p>
-            <p class="text-center">{{cell.description}}</p>
+            <p class="text-center">{{bingoTable.cells[index].description}}</p>
 	    </div>
 	    </div> 
     </div>
     </div>
 
-    <div class="row">
-    <div ng-repeat="cell in bingoTable.row1">
+   <div class="row">
+    <div ng-repeat="index in [6, 7, 8, 9, 10, 11]">
         <div class="col-md-2">
-        <div class="panel panel-primary" ng-click="voteRow1(cell.col)">
+        <div class="panel panel-primary" ng-click="vote(index)">
             <h1 ng-if="isOwner()">
-                 {{game.row1[cell.col]}}
+                 {{game.votes[index]}}
             </h1>
             <p class="text-center">
-                <img src="img/{{cell.filename}}">
+                <img src="img/{{bingoTable.cells[index].filename}}">
             </p>
-            <p class="text-center">{{cell.description}}</p>
-            </p>
-	    </div>
-	    </div> 
+            <p class="text-center">{{bingoTable.cells[index].description}}</p>
+        </div>
+        </div> 
     </div>
     </div>
 
 	<div class="row">
-    <div ng-repeat="cell in bingoTable.row2">
+    <div ng-repeat="index in [12, 13, 14, 15, 16, 17]">
         <div class="col-md-2">
-        <div class="panel panel-primary" ng-click="voteRow2(cell.col)">
+        <div class="panel panel-primary" ng-click="vote(index)">
             <h1 ng-if="isOwner()">
-                 {{game.row2[cell.col]}}
+                 {{game.votes[index]}}
             </h1>
             <p class="text-center">
-                <img src="img/{{cell.filename}}">
+                <img src="img/{{bingoTable.cells[index].filename}}">
             </p>
-            <p class="text-center">{{cell.description}}</p>
-            </p>
-	    </div>
-	    </div> 
+            <p class="text-center">{{bingoTable.cells[index].description}}</p>
+        </div>
+        </div> 
     </div>
     </div>
 </div>
